force-app/main/default/objects/GEMs_Incident__c/GEMs_Incident__c.object-meta.xml
<CustomObject>
    <label>GEMS Incident</label>
    <nameField>
        <label>Jira Incident Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEMS Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>