force-app/main/default/objects/GEMs_Incident__c/fields/Assigned_To_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Group_Name__c</fullName>
    <label>Assigned To Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>