force-app/main/default/objects/GEMs_Incident__c/fields/Customer_LOC_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_LOC_Number__c</fullName>
    <label>Customer LOC Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>