force-app/main/default/objects/GEMs_Incident__c/fields/Gems_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Gems_Site_Name__c</fullName>
    <label>Gems Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>