force-app/main/default/objects/GEMs_Incident__c/fields/Global_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Global_Customer_Name__c</fullName>
    <label>Global Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>