force-app/main/default/objects/GEMs_Incident__c/fields/Incident_Short_Desc__c.field-meta.xml
<CustomField>
    <fullName>Incident_Short_Desc__c</fullName>
    <label>Incident Short Desc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>