force-app/main/default/objects/GEMs_Incident__c/fields/Incident_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Incident_Start_Date_Time__c</fullName>
    <label>Incident Start Date Time</label>
    <type>DateTime</type>
</CustomField>