force-app/main/default/objects/GEMs_Incident__c/fields/Incident_Status_Desc__c.field-meta.xml
<CustomField>
    <fullName>Incident_Status_Desc__c</fullName>
    <label>Incident Status Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>