force-app/main/default/objects/GEMs_Incident__c/fields/Last_Customer_Contact_Banding__c.field-meta.xml
<CustomField>
    <fullName>Last_Customer_Contact_Banding__c</fullName>
    <formula>if(NOW()- Last_Customer_Contact__c &gt;= 28 , &apos;28+&apos;,

if(NOW()-Last_Customer_Contact__c &gt;= 21 , &apos;21-&gt;27&apos;,

if(NOW()-Last_Customer_Contact__c &gt;= 14 , &apos;14-&gt;20&apos;,

if(NOW()-Last_Customer_Contact__c &gt;= 7 , &apos;07-&gt;13&apos;,

if(NOW()-Last_Customer_Contact__c&gt;= 0 ,&apos;00-&gt;06&apos;,

&apos;No Customer Contact&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Customer Contact Banding</label>
    <type>Text</type>
</CustomField>