force-app/main/default/objects/GEMs_Incident__c/fields/Outbound_Serial_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Serial_Nbr__c</fullName>
    <label>Outbound Serial Nbr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>