force-app/main/default/objects/GEMs_Incident__c/fields/Remotely_Resolved_Count__c.field-meta.xml
<CustomField>
    <fullName>Remotely_Resolved_Count__c</fullName>
    <label>Remotely Resolved Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>