force-app/main/default/objects/GEMs_Incident__c/fields/Request_Close_Date_Est__c.field-meta.xml
<CustomField>
    <fullName>Request_Close_Date_Est__c</fullName>
    <label>Request Close Date Est</label>
    <type>DateTime</type>
</CustomField>