force-app/main/default/objects/GEMs_Incident__c/fields/Severity_Code__c.field-meta.xml
<CustomField>
    <fullName>Severity_Code__c</fullName>
    <label>Severity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>