force-app/main/default/objects/GEMs_Incident__c/fields/Severity_Desc__c.field-meta.xml
<CustomField>
    <fullName>Severity_Desc__c</fullName>
    <label>Severity Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>