force-app/main/default/objects/GEMs_Incident__c/fields/Ship_Date_Est__c.field-meta.xml
<CustomField>
    <fullName>Ship_Date_Est__c</fullName>
    <label>Ship Date Est</label>
    <type>DateTime</type>
</CustomField>