force-app/main/default/objects/GEMs_Incident__c/fields/Site_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Site_Address_Line_1__c</fullName>
    <label>Site Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>