force-app/main/default/objects/GEMs_Incident__c/fields/Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Id__c</fullName>
    <label>Site Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>