force-app/main/default/objects/GEMs_Incident__c/fields/Sla_Priority__c.field-meta.xml
<CustomField>
    <fullName>Sla_Priority__c</fullName>
    <label>Sla Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>