force-app/main/default/objects/GEMs_Incident__c/fields/Sla_Type__c.field-meta.xml
<CustomField>
    <fullName>Sla_Type__c</fullName>
    <label>Sla Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>