force-app/main/default/objects/GEMs_Incident__c/fields/Sub_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Account_Type__c</fullName>
    <label>Sub Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>