force-app/main/default/objects/GEMs_Incident__c/fields/Team_Type__c.field-meta.xml
<CustomField>
    <fullName>Team_Type__c</fullName>
    <label>Team Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>