force-app/main/default/objects/GEMs_Incident__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>